# vibex-app

./: .bundlesize.json  .commitlintrc.json  .empty-files-analysis.md  .env.example  .env.example.gemini  .env.production  .env.sentry-build-plugin  .env.test  .gitignore  .npmrc  .qlty.yml  .releaserc.json  .vercelignore  AGENTS.md  AGENT_VALIDATION.md  API-REFACTORING-SUMMARY.md  BUNTESTCONFIGURATOR_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  CODEBASE_ASSESSMENT_REPORT.md  COMPLEXITY_REPORT.md  COMPREHENSIVE-IMPROVEMENTS-SUMMARY.md  COMPREHENSIVE_QUALITY_ANALYSIS.md  COMPREHENSIVE_QUALITY_ANALYSIS_REPORT.md  COMPREHENSIVE_TEST_COVERAGE_ANALYSIS.md  CONTAINER_REFACTORING.md  COVERAGE_REPORT.md  DATABASE_OBSERVABILITY_IMPLEMENTATION_STATUS.md  DEPLOYMENT.md  FINAL-TEST-EXECUTION-COORDINATOR-REPORT.md  FINAL_PROJECT_HEALTH_ASSESSMENT.md  GITHUB_SECRETS_SETUP.md  INTEGRATION_MIGRATION_PLAN.md  INTEGRATION_PERFORMANCE_OPTIMIZATION_REPORT.md  INTEGRATION_TESTING_GUIDE.md  JEST_REMOVAL_COMPLETE.md  JEST_TO_VITEST_MIGRATION_COMPLETE.md  MERGE_PLAN.md  MERGE_VALIDATION_REPORT.md  (+221 more)
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: commit-msg  pre-commit  pre-push
.qlty/: logs  out  plugin_cachedir  qlty.toml  results
.serena/: project.yml
.storybook/: README.md  main.ts  preview.tsx  vitest.setup.ts
__mocks__/: lucide-react.js
all-tests/: README.md
app/: client-page.test.tsx  client-page.tsx  container-refactored.test.tsx  container.test.tsx  layout.tsx  (+7 more)
wasm-modules/vector-search/: Cargo.toml  README.md  build.sh
wasm-modules/vector-search/src/: lib.rs
(+2265 files in other folders)
