[package]
name = "vector-search-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
packed_simd = { version = "0.3", package = "packed_simd_2" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["simd"]
simd = []